--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <hr />
     <h2>Other | Links</h2>
-    <a href="./hobbies.html">My free time</a>
+    <a href="./public/hobbies.html">My free time</a>
     <a href="./public/contact.html">Contact Me</a>    
 
     <footer>
